chore: remove commented lines and add project url.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,16 +17,10 @@ classifiers = [
     "Programming Language :: Python :: 3",
 ]
 keywords = ["sort", "order", "sorting", "list"]
-# dependencies = [
-
-# ]
 requires-python = ">=3.9"
 
-# [project.optional-dependencies]
-# dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]
-
-# [project.urls]
-# Homepage = "TODO"
+[project.urls]
+Homepage = "https://github.com/robertobetini/sortwiz"
 
 [project.scripts]
 sortwiz = "sortwiz.__main__:main"
